# pychessai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudops.py  config.py  datasets.py  demo_chess_module.ipynb  deploy_training.yaml  gym_env.py  helper.py  main.py  match.py  move_choice.py  policy.py  pyproject.toml  ray_iter.py  ray_main.py  ray_model.py  ray_test.py  requirements.txt  test.py  training.py
Scripts/: activate  activate.bat
agents/: LeelaZero.py  MinimaxAgents.py  NegaMaxAgents.py  RandomAgent.py  SimpleRL.py
datasets/: Karpov.pgn
docker_agents/simulator_agent/: script.py
legacy/: config.py  game.py  main.py  move_choice.py
legacy/agents/: LeelaZero.py  NegaMaxAgents.py  SimpleRL.py
legacy/core/: opening.py
legacy/datasets/: Duda.pgn
legacy/openings/: closedsicilian.fen  df_openings.csv  englishopening2.fen  queensgambitdeclined.fen
legacy/webplayer/: game.py  gameagent.py  run.py
openings/: queensgambitaccepted.fen  slavdefence.fen
pychessai/: constants.py
pychessai/agents/: __init__.py  agents.py  minimax_agents.py  random_agent.py  simple_value_model.py  simple_value_nn_agent.py
pychessai/game_env/: chess.py
pychessai/models/: __init__.py  models.py  simple_value_model.py  train.py
pychessai/move_choice/: __init__.py  mcts.py  minimax.py  utils.py
pychessai/utils/: __init__.py  data.py  (+5 more)
ray_utils/: leelazero_model.py  leelazero_policy.py  leelazero_trainer.py  legacy_leela_policy.py  mcts.py  randomlegalpolicy.py
search/: search.py
tests/: test_random_legal_policy.py  test_ray_env.py  test_ray_mcts.py
(+4 files in other folders)
